--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,49 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+  /* width */
+body::-webkit-scrollbar {
+    width: 10px;
+    background:rgb(255, 255, 255);
+  
+  }
+  
+  /* Track */
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  body::-webkit-scrollbar-thumb {
+    background: #10a310; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  body::-webkit-scrollbar-thumb:hover {
+    background: #52f15217; 
+  }
+  #findCars::-webkit-scrollbar {
+    width: 10px;
+    background:rgb(255, 255, 255);
+  
+  }
+  
+  /* Track */
+  #findCars::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(255, 255, 255); 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  #findCars::-webkit-scrollbar-thumb {
+    background: #ffffff; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  #findCars::-webkit-scrollbar-thumb:hover {
+    background: rgb(255, 255, 255)02; 
+  }
