--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(255, 255, 255);
-  /* color:#d4d4d4; */
+  /* color:#020267; */
 }
 
 .App-link {
