--- a/src/index.css
+++ b/src/index.css
@@ -30,13 +30,13 @@ body::-webkit-scrollbar {
    
   /* Handle */
   body::-webkit-scrollbar-thumb {
-    background: #10a310; 
+    background: #020267; 
     border-radius: 10px;
   }
   
   /* Handle on hover */
   body::-webkit-scrollbar-thumb:hover {
-    background: #52f15217; 
+    background: #020267; 
   }
   #findCars::-webkit-scrollbar {
     width: 10px;
@@ -46,17 +46,17 @@ body::-webkit-scrollbar {
   
   /* Track */
   #findCars::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgb(255, 255, 255); 
+    box-shadow: inset 0 0 5px #020267; 
     border-radius: 10px;
   }
    
   /* Handle */
   #findCars::-webkit-scrollbar-thumb {
-    background: #ffffff; 
+    background: #020267; 
     border-radius: 10px;
   }
   
   /* Handle on hover */
   #findCars::-webkit-scrollbar-thumb:hover {
-    background: rgb(255, 255, 255)02; 
+    background: #020267; 
   }
