--- a/src/index.css
+++ b/src/index.css
@@ -30,33 +30,33 @@ body::-webkit-scrollbar {
    
   /* Handle */
   body::-webkit-scrollbar-thumb {
-    background: #020267; 
+    background: #5c0931; 
     border-radius: 10px;
   }
   
   /* Handle on hover */
   body::-webkit-scrollbar-thumb:hover {
-    background: #020267; 
+    background: #5c0931; 
   }
   #findCars::-webkit-scrollbar {
     width: 10px;
-    background:rgb(255, 255, 255);
+    background:#ffffff;
   
   }
   
   /* Track */
   #findCars::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px #020267; 
+    box-shadow: inset 0 0 5px #ffffff; 
     border-radius: 10px;
   }
    
   /* Handle */
   #findCars::-webkit-scrollbar-thumb {
-    background: #020267; 
+    background: #ffffff; 
     border-radius: 10px;
   }
   
   /* Handle on hover */
   #findCars::-webkit-scrollbar-thumb:hover {
-    background: #020267; 
+    background: #ffffff; 
   }
