--- a/src/Components/HomePage/FindCars/FindCars.css
+++ b/src/Components/HomePage/FindCars/FindCars.css
@@ -14,6 +14,7 @@
   /* Handle */
   #findCars::-webkit-scrollbar-thumb {
     background: #ffffff; 
+    /* background: #bbfcff;  */
     border-radius: 10px;
   }
   
