--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ body::-webkit-scrollbar {
   
   /* Handle on hover */
   body::-webkit-scrollbar-thumb:hover {
-    background: #5c0931; 
+    background: #8e2158; 
   }
   #findCars::-webkit-scrollbar {
     width: 10px;
@@ -63,4 +63,8 @@ body::-webkit-scrollbar {
   /* Handle on hover */
   #findCars::-webkit-scrollbar-thumb:hover {
     background: #ffffff; 
+  }
+
+  body{
+    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
   }
