--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,9 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(255, 255, 255);
-  /* color:#efeeef; */
+  /* color: #050119ec; */
+  /* color:#5e0224e7; */
+  /* color:#6d50ffe6; */
 }
 
 .App-link {
