--- a/src/Components/HomePage/FindCars/FindCars.css
+++ b/src/Components/HomePage/FindCars/FindCars.css
@@ -9,13 +9,14 @@
   #findCars::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px rgb(255, 255, 255); 
     border-radius: 10px;
+    /* color: #e1e1e1 */
   }
    
   /* Handle */
   #findCars::-webkit-scrollbar-thumb {
     background: #ffffff; 
     /* background: #bbfcff;  */
-    /* background: #e1dfe0;  */
+    /* background: #014608;  */
     border-radius: 10px;
   }
   
