--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Artifika&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Artifika&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Allura&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Mynerve&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mynerve&display=swap'); */
 
 
 
@@ -44,32 +44,8 @@ body::-webkit-scrollbar {
   }
   
   /* Handle on hover */
-  body::-webkit-scrollbar-thumb:hover {
-    background: #8e2158; 
-  }
-  #findCars::-webkit-scrollbar {
-    width: 10px;
-    background:#ffffff;
-  
-  }
-  
-  /* Track */
-  #findCars::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px #ffffff; 
-    border-radius: 10px;
-    
-  }
-   
-  /* Handle */
-  #findCars::-webkit-scrollbar-thumb {
-    background: #ffffff; 
-    border-radius: 10px;
-  }
-  
-  /* Handle on hover */
-  #findCars::-webkit-scrollbar-thumb:hover {
-    background: #ffffff; 
-  }
+
+ 
 
   body{
     -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
